# OpenXR-Automation

./: .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  clean_md_for_zoom.sh  create_extension_checklist.py  cts-workboard-import.py  cts_workboard_update.py  cts_workboard_update2.py  ext_review_priority_list.py  generate_milestones.py  get_gitlab_ci_stats.py  kanboard-from-nullboard-async.py  kanboard-from-nullboard.py  kanboard.pyi  kb_create_extension_task.py  kb_ops_migrate.py  look_for_extension_mrs.py  manage_extension_mrs.py  nullboard_gitlab.py  nullboard_to_markdown.py  openxr.py  openxr_agenda.py  openxr_release_checklist_update.py  ops_board_adjust.py  process_conformance_errors.py  requirements.txt  work_item_and_collection.py
gitlab-work-tracking/: Cargo.toml  deny.toml
gitlab-work-tracking/app/: Cargo.toml
gitlab-work-tracking/app/src/: board_update.rs  find_more.rs  main.rs  map.rs
gitlab-work-tracking/board_update/: Cargo.toml
gitlab-work-tracking/board_update/src/: cli.rs  lib.rs  note_formatter.rs
gitlab-work-tracking/cts_workboard_update/: Cargo.toml
gitlab-work-tracking/cts_workboard_update/src/: find_more.rs  main.rs
gitlab-work-tracking/gitlab_work/: Cargo.toml
gitlab-work-tracking/gitlab_work/src/: gitlab_refs.rs  lib.rs  note.rs  project_mapper.rs  work_item_and_collection.rs
gitlab-work-tracking/gitlab_work_units/: Cargo.toml
gitlab-work-tracking/gitlab_work_units/src/: lib.rs  lookup.rs  note.rs  project_mapper.rs  refs.rs  regex.rs  work_unit_and_collection.rs
gitlab-work-tracking/nullboard/: Cargo.toml
gitlab-work-tracking/nullboard/src/: board.rs  experiment.rs  iterators.rs  lib.rs  list.rs  note.rs  traits.rs
gitlab-work-tracking/nullboard_tools/: Cargo.toml
gitlab-work-tracking/nullboard_tools/src/: board.rs  iterators.rs  lib.rs  list.rs  note.rs  traits.rs
gitlab-work-tracking/openxr_release_checklist_update/: Cargo.toml
gitlab-work-tracking/openxr_release_checklist_update/src/: board_operation.rs  find_more.rs  main.rs  prettyprint.rs
gitlab-work-tracking/work_unit_collection/: Cargo.toml
gitlab-work-tracking/work_unit_collection/src/: atom_table.rs  collection.rs  error.rs  insert_outcome.rs  lib.rs  traits.rs  work_unit.rs
gitlab-work-tracking/workboard_update/: Cargo.toml
gitlab-work-tracking/workboard_update/src/: cli.rs  find_more.rs  lib.rs  line_or_reference.rs  note_formatter.rs  note_line.rs  traits.rs
openxr_ops/: checklists.py  cts_board_utils.py  custom_sort.py  ext_author_kind.py  extensions.py  gitlab.py  kanboard_helpers.py  kb_auto_actions.py  kb_config.toml  kb_create.py  kb_defaults.py  kb_enums.py  kb_links.py  kb_ops_auto_actions.py  kb_ops_card.py  kb_ops_collection.py  kb_ops_config.py  kb_ops_create.py  kb_ops_gitlab.py  kb_ops_queue.py  kb_ops_stages.py  kb_ops_subtasks.py  kb_ops_task.py  kb_result_types.py  kb_review_priority.py  labels.py  mr_stats.py  nullboard.py  parse.py  priority_results.py  review_activity.py  review_data.py  review_priority.py  subtasks.toml  vendor_reviews.py  vendors.py
openxr_ops/kb_cts/: __init__.py  collection.py  create.py  export.py  stages.py  task.py  update.py
openxr_ops/kb_ops/: __init__.py  collection.py  commands.toml  config.py  conversions.py  create.py  gitlab.py  load.py  stages.py  task.py  update.py
openxr_ops/templates/: base.html  ext_extension_desc.md  khr_extension_desc.md  macros.j2  new_ext_comment.md  priority_list.html  priority_list_kb.html  vendor_ext_list.html  vendor_extension_desc.md  vendor_list.html
