[package]
edition = "2021"
name = "gitlab-work-tracking"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
env_logger = "0.10"
anyhow = "1.0"
nullboard-tools = {path = "../nullboard"}
gitlab-work = {path = "../gitlab_work"}
itertools = "0.10"
dotenv = "0.15"
log = "0.4"
