# Copyright 2022-2023, Collabora, Ltd.
#
# SPDX-License-Identifier: BSL-1.0
#
# Author: Ryan Pavlik <ryan.pavlik@collabora.com>

[package]
edition = "2021"
name = "gitlab-work-tracking"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive", "env", "cargo"]}
dotenvy = "0.15"
env_logger = "0.10"
gitlab-work = {path = "../gitlab_work"}
itertools = "0.10"
log = "0.4"
nullboard-tools = {path = "../nullboard"}
