# Copyright 2022-2023, Collabora, Ltd.
#
# SPDX-License-Identifier: BSL-1.0
#
# Author: Rylie Pavlik <rylie.pavlik@collabora.com>

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
description = "Functionality for associating GitLab issues and merge requests as grouped 'work units'"
edition = "2021"
license = "BSL-1.0"
name = "gitlab_work_units"
version = "0.1.0"

[dependencies]
work_unit_collection = {version = "0.1.0", path = "../work_unit_collection"}

derive_more = "0.99"
gitlab = "0.1506.*"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
regex = "1.7"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
typed-index-collections = "3.1.0"
