# Copyright 2022-2023, Collabora, Ltd.
#
# SPDX-License-Identifier: BSL-1.0
#
# Author: Ryan Pavlik <ryan.pavlik@collabora.com>

[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "Functionality to work with Kanban-style workboards like those exported/imported by Nullboard"
edition = "2021"
license = "BSL-1.0"
name = "nullboard_tools"
version = "0.1.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
