# Copyright 2022-2023, Collabora, Ltd.
#
# SPDX-License-Identifier: BSL-1.0
#
# Author: Ryan Pavlik <ryan.pavlik@collabora.com>

[package]
authors = ["Ryan Pavlik <ryan.pavlik@collabora.com>"]
description = "Update a Nullboard-type workboard by parsing, associating, and querying GitLab"
edition = "2021"
license = "BSL-1.0"
name = "workboard_update"
version = "0.1.0"

[dependencies]
# internal dependencies
gitlab_work_units = {version = "0.1.0", path = "../gitlab_work_units"}
nullboard_tools = {version = "0.1.0", path = "../nullboard_tools"}
work_unit_collection = {version = "0.1.0", path = "../work_unit_collection"}

# third-party dependencies
clap = {version = "4.0", features = ["derive", "env", "cargo"]}
gitlab = "0.1506.*"
itertools = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
